# manipulator

./: CMakeLists.txt
include/: display_data.h
include/controller/: controller.h
model/manipulator/: base_link.STL  end_effector.STL  link1.STL  link2.STL  link3.STL  manipulator.urdf  manipulator.xml
src/: basic.cc  display_data.cc
src/controller/: controller.cc
